examples/invalid/variables9.cp
var one : real is 1.0 is 1.0;